portfolio-details-Java-project.html

--- a/portfolio-details-Java-project.html
+++ b/portfolio-details-Java-project.html
@@ -125,7 +125,7 @@
         &copy; Copyright <strong><span>judit</span></strong>
       </div>
       <div class="credits">
-        Designed by <a href="index.html.#hero">Juditdilaxshana</a>
+        Designed by <a href="https://juditdilaxshana.github.io/Portfolio_Website/#hero">Juditdilaxshana</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
